# APIDiff

./: .editorconfig  .gitignore  README.md  docker-compose.yml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  infra.yml  security.yml
docs/: OBSERVABILITY.md  RUNBOOK.md  THREAT_MODEL.md
docs/adr/: 0000-adr-template.md  0001-monorepo.md  0002-grpc-contract-first.md  0003-postgres-system-of-record.md  0004-ephemeral-per-pr-environments.md  0005-generated-code-strategy.md  0006-capture-time-sanitization.md  0007-replay-diff-verdict.md  0008-regression-orchestration.md  0009-analysis-heuristics.md  0010-dashboard-data-and-auth.md  0011-deployment-and-cicd.md  0012-observability-and-mtls.md  README.md
infra/deploy/: README.md
infra/deploy/apidiff/: Chart.yaml  values-pr.yaml  values.yaml
infra/deploy/apidiff/templates/: deployments.yaml  rbac.yaml  serviceaccount.yaml  services.yaml
infra/otel/: collector.yaml
infra/terraform/: README.md  apis.tf  database.tf  gke.tf  iam.tf  network.tf  outputs.tf  registry.tf  secrets.tf  terraform.tfvars.example  variables.tf  versions.tf
proto/: README.md  buf.gen.yaml
scripts/: seed-demo.sh
services/analysis/: Dockerfile  pyproject.toml
services/analysis/src/analysis/: __init__.py  __main__.py  clustering.py  explain.py  health.py  normalize.py  observability.py  server.py  service.py
services/analysis/tests/: test_clustering.py  test_contracts.py  test_explain.py  test_health.py  test_server.py
services/api/: ApiDiff.Api.slnx  Dockerfile
services/replay-engine/: Dockerfile  go.mod  go.sum
web/dashboard/: eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
web/dashboard/src/: App.tsx  auth.tsx  main.tsx  styles.css
(+103 files in other folders)
