[project]
name = "apidiff-analysis"
version = "0.0.0"
description = "APIDiff analysis service: cluster duplicate scenarios and explain failures."
requires-python = ">=3.13"
dependencies = [
  "grpcio>=1.68",
  "protobuf>=5.29",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.11",
  "grpcio-tools>=1.68",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
# Generated protobuf/gRPC stubs are checked in but not linted.
extend-exclude = ["gen"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src", "tests"]
# Generated stubs are not type-checked under strict mode.
exclude = ["gen/"]

[[tool.mypy.overrides]]
module = ["apidiff.*"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
pythonpath = ["src", "gen"]
testpaths = ["tests"]
